--- a/pattern-lab/source/_meta/_00-head.twig
+++ b/pattern-lab/source/_meta/_00-head.twig
@@ -4,8 +4,8 @@
 		<title>{{ title }}</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
-		
-		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
+
+		<link rel="stylesheet" href="/themes/foundation_patterns/css/foundation_patterns.css?{{ cacheBuster }}" media="all" />
 		
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{{ patternLabHead | raw }}
