--- a/pattern-lab/source/_meta/_01-foot.twig
+++ b/pattern-lab/source/_meta/_01-foot.twig
@@ -1,6 +1,8 @@
 	
 	<!--DO NOT REMOVE-->
 	{{ patternLabFoot | raw }}
+
+	<script src="https://use.fontawesome.com/719374638f.js"></script>
 	
 	</body>
 </html>
