Added default marketing site footer markup to pattern library and updated pattern watch task

--- a/pattern-lab/source/_meta/_00-head.twig
+++ b/pattern-lab/source/_meta/_00-head.twig
@@ -8,7 +8,9 @@
 		<link rel="stylesheet" href="/themes/foundation_patterns/css/foundation_patterns.css?{{ cacheBuster }}" media="all" />
 
 		<!-- Marketing -->
+		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/content-section/marketing-site-content-section.css?{{ cacheBuster }}" media="all" />
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/feature-section/marketing-site-feature-section.css?{{ cacheBuster }}" media="all" />
+		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/footer/marketing-site-footer.css?{{ cacheBuster }}" media="all" />
 		
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{{ patternLabHead | raw }}
