--- a/templates/patterns/marketing-site/hero-section/marketing-site-hero-section.twig
+++ b/templates/patterns/marketing-site/hero-section/marketing-site-hero-section.twig
@@ -1,7 +1,7 @@
-<div class="marketing-site-hero">
+<div class="marketing-site-hero" style="background: url('{{ background_url }}') top right no-repeat; background-size: cover;">
   <div class="marketing-site-hero-content">
-    <h1>Yeti Snowcone Agency</h1>
-    <p class="subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-    <a href="#" class="round button">learn more</a>
+    <h1>{{ header }}</h1>
+    <p class="subheader">{{ subheader }}</p>
+    {{ button }}
   </div>
 </div>
