--- a/templates/patterns/marketing-site/hero-section/marketing-site-hero-section.scss
+++ b/templates/patterns/marketing-site/hero-section/marketing-site-hero-section.scss
@@ -1,4 +1,5 @@
 @import '../../../../scss/settings';
+@import '../../../../bower_components/foundation-sites/scss/components/button';
 
 $marketing-site-hero-height: 65vh;
 
@@ -22,7 +23,8 @@ $marketing-site-hero-height: 65vh;
     font-size: 32px;
   }
 
-  .button.round {
+  a {
+    @include button();
     border-radius: 5000px;
     text-transform: uppercase;
     font-size: 12px;
