--- a/pattern-lab/source/_meta/_00-head.twig
+++ b/pattern-lab/source/_meta/_00-head.twig
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/feature-section/marketing-site-feature-section.css?{{ cacheBuster }}" media="all" />
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/footer/marketing-site-footer.css?{{ cacheBuster }}" media="all" />
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/hero-section/marketing-site-hero-section.css?{{ cacheBuster }}" media="all" />
+		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/global/testimonial-block-vertical/testimonial-block-vertical.css?{{ cacheBuster }}" media="all" />
 		
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{{ patternLabHead | raw }}
