Added responsive social media section component to pattern library

--- a/pattern-lab/source/_meta/_00-head.twig
+++ b/pattern-lab/source/_meta/_00-head.twig
@@ -7,6 +7,9 @@
 
 		<link rel="stylesheet" href="/themes/foundation_patterns/css/foundation_patterns.css?{{ cacheBuster }}" media="all" />
 
+		<!-- Global -->
+		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/global/responsive-social-media-section/responsive-social-media-section.css?{{ cacheBuster }}" media="all" />
+
 		<!-- Marketing -->
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/content-section/marketing-site-content-section.css?{{ cacheBuster }}" media="all" />
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/feature-section/marketing-site-feature-section.css?{{ cacheBuster }}" media="all" />
