HACK17-wstewart-patterns-testimonial-block-vertical
- img class getting lost.
- Removed image class from `<img>` tag
- updated twig template to wrap `<img>` in `<div>` with original image class
- removed image class from template and pattern lab yaml file preview.

--- a/templates/patterns/global/testimonial-block-vertical/testimonial-block-vertical.scss
+++ b/templates/patterns/global/testimonial-block-vertical/testimonial-block-vertical.scss
@@ -42,9 +42,11 @@ $testimonial-block-vertical-bg: $testimonial-light-blue;
 }
 
 .testimonial-block-vertical-avatar {
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
+  img {
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .testimonial-block-vertical-name {
