--- a/templates/patterns/global/testimonial-block-vertical/testimonial-block-vertical.twig
+++ b/templates/patterns/global/testimonial-block-vertical/testimonial-block-vertical.twig
@@ -8,9 +8,14 @@
 
     <div class="testimonial-block-vertical-person">
 
-        {{ testimonial_avatar }}
+        <div class="testimonial-block-vertical-avatar">
+
+            {{ testimonial_avatar }}
+
+        </div>
 
         <div>
+
             <p class="testimonial-block-vertical-name">{{ testimonial_person }}</p>
 
             <p class="testimonial-block-vertical-info">{{ testimonial_title }}, {{ testimonial_company }}</p>
