Removing footer twig update, committed by accident.

--- a/pattern-lab/source/_meta/_01-foot.twig
+++ b/pattern-lab/source/_meta/_01-foot.twig
@@ -1,54 +1,8 @@
+	
+	<!--DO NOT REMOVE-->
+	{{ patternLabFoot | raw }}
 
-			<!--DO NOT REMOVE-->
-			{{ patternLabFoot | raw }}
-
-			{# Include Foundation Dependencies #}
-
-			{# core/drupal library #}
-			<script src="/core/assets/vendor/domready/ready.min.js"></script>
-			<script src="/core/misc/drupalSettingsLoader.js"></script>
-			<script src="/core/misc/drupal.js"></script>
-
-			{# core/jquery library #}
-			<script src="/core/assets/vendor/jquery/jquery.min.js"></script>
-
-			{# core/jquery.once library #}
-			<script src="/core/assets/vendor/jquery-once/jquery.once.min.js"></script>
-
-			{# Include Foundation Scripts from Parent Theme #}
-			<script src="/themes/centura_base/bower_components/foundation-sites/dist/foundation.min.js"></script>
-			<script src="/themes/zurb_foundation/js/top_bar_active.js"></script>
-			<script src="/themes/centura_base/bower_components/motion-ui/dist/motion-ui.min.js"></script>
-			<script src="/themes/zurb_foundation/js/status_in_reveal.js"></script>
-			<script src="/themes/zurb_foundation/js/alert_close.js"></script>
-
-			{# Include scripts from Centura Base Theme#}
-			<script src="/themes/centura_base/source/js/slick/slick.min.js"></script>
-			<script src="/themes/centura_base/source/js/centura_base.js"></script>
-
-
-      {# Custom scripts from components #}
-      <script src="/themes/centura_base/source/_patterns/00-atoms/Forms/forms.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/00-atoms/Buttons/button_ripple.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/01-molecules/Controls/button-group.js?{{ cacheBuster }}"></script>
-			<script src="/themes/centura_base/source/_patterns/01-molecules/Controls/m-button-group--gender.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/01-molecules/Controls/Range-Slider/nouislider.min.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/01-molecules/Controls/Range-Slider/range-slider.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/02-organisms/Search/search-results.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/02-organisms/Carousels/carousel-vertical.js?{{ cacheBuster }}"></script>
-      <script src="/themes/centura_base/source/_patterns/02-organisms/Carousels/carousel.js?{{ cacheBuster }}"></script>
-
-			<script>
-				(function ($) {
-					$(document).foundation();
-					$(document).ready(function() {
-						// Initialize all of the range sliders in the pattern library
-						$('.m-range-slider--distance').each(function() {
-							createDistanceSlider(this);
-						});
-					});
-				})(jQuery);
-			</script>
-		</div>
+	<script src="https://use.fontawesome.com/719374638f.js"></script>
+	
 	</body>
 </html>
