--- a/pattern-lab/source/_meta/_00-head.twig
+++ b/pattern-lab/source/_meta/_00-head.twig
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/global/responsive-social-media-section/responsive-social-media-section.css?{{ cacheBuster }}" media="all" />
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/global/read-more/read-more.css?{{ cacheBuster }}" media="all" />
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/global/testimonial-block-vertical/testimonial-block-vertical.css?{{ cacheBuster }}" media="all" />
+		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/global/pricing-table/pricing-table.css?{{ cacheBuster }}" media="all" />
 
 		<!-- Marketing -->
 		<link rel="stylesheet" href="/themes/foundation_patterns/templates/patterns/marketing-site/content-section/marketing-site-content-section.css?{{ cacheBuster }}" media="all" />
