Fixed minor marging issue with pricing table

--- a/templates/patterns/global/pricing-table/pricing-table.scss
+++ b/templates/patterns/global/pricing-table/pricing-table.scss
@@ -9,6 +9,7 @@
 
 // Pricing Table Styles.
 .pricing-table {
+  margin-left: 0;
   background-color: $white;
   border: solid 1px $medium-gray;
   width: 100%;
